--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Лабораторна робота №5/ Продовження</title>
+    <title>Лабораторна робота №5/ Продовження / Редагуємо з інщої папки</title>
 </head>
 <body>
     <h1>Лабораторна робота №5</h1>
